fixed popup responsive on mobile

--- a/css/responsive.less
+++ b/css/responsive.less
@@ -19,9 +19,9 @@
 }
 
 @media screen and (min-width:960px) and (max-width:1188px) {
-	/*#content .container{
+	#content .container{
 		background: yellow;
-	}*/
+	}
 	.follow_post{
 		height: 100%;
 	}
@@ -236,9 +236,24 @@
 
 
 @media screen and (min-width:750px) and (max-width:959px) {
-	/*#content .container {
+	#content .container {
 			background: orange;
-	}*/
+	}
+	.overlayWrap{
+		position: relative;
+		width: 90%;
+		height: 1px;
+		z-index: 200;
+		top: 10px;
+		left: 5%;
+		right: 5%;
+	}
+	.cartPopup .prdctSource .products .singleBox {
+		width: 106px;
+		float: left;
+		text-align: center;
+		margin: 0 9px;
+	}
 	.follow{
 		.leftWing{
 			 .leftWrap {
@@ -877,9 +892,6 @@
 		}
 		
 	}
-	.overlayWrap {
-		top: 40px;
-	}
 	.formHalf .left {
 		width: 100%;
 		margin-bottom: 20px;
@@ -1099,9 +1111,25 @@
 }/*786 ends*/
 
 @media screen and (min-width:500px) and (max-width:749px) {
-	/*#content .container {
+	#content .container {
 		background: pink;
-	}*/
+	}
+	.overlayWrap{
+		position: relative;
+		width: 90%;
+		height: 1px;
+		z-index: 200;
+		top: 10px;
+		left: 5%;
+		right: 5%;
+	}
+	.cartPopup .prdctSource .products .singleBox {
+		width: 106px;
+		float: left;
+		text-align: center;
+		margin: 0 9px;
+	}
+
 	.follow{
 		.leftWing{
 			width: 100%;
@@ -1865,9 +1893,58 @@
 
 
 @media screen and (min-width:100px) and (max-width:499px) {
-	/*#content .container{
+	#content .container{
 		background: blue;
-	}*/
+	}
+	.messagePopup{
+		h1{
+			text-align: center;
+			img{
+				width: 60%;
+			}
+		}
+		.formHalf{
+			.left, .right{
+				width: 100%;
+				padding: 0;
+			}
+			.left{
+				margin-bottom: 20px;
+			}
+		}
+	}
+	.cartPopup .prdctSource .products .singleBox {
+		width: 100%;
+		margin: 0 0 20px;
+	}
+	.cartPopup{
+		.cartItem {
+			img{
+				width: 100%;
+				margin-bottom: 20px;
+			}
+			.cartDet{
+				margin-left: 0;
+				margin-bottom: 20px;
+				width: 100%;
+				float: left;
+			}
+		}
+		.butnFix a{
+			display: block;
+			margin: 5px 0;
+		}
+	}
+	.overlayWrap{
+		position: relative;
+		width: 90%;
+		height: 1px;
+		z-index: 200;
+		top: 10px;
+		left: 5%;
+		right: 5%;
+	}
+	 
 	.story_board_main .discBox{
 		width: 100%;
 	}
